# backtester

./: .gitignore  db-scheme.md
docs/: db-scheme.md  release-notes-0.1.0.md
scripts/: list_configured_indicators.py  loader.py  requirments.txt  setup_database.py  show_asset_data.py
technical-indicator-calculator/: .env  Cargo.toml  Dockerfile  Dockerfile.old  build.rs  docker-compose.yml  llm_optimizer.py  release-notes.md  requirements.txt  strategy-database-schema.sql
technical-indicator-calculator/src/: cli.rs  daemon.rs  lib.rs  main.rs  talib_bindings.rs  worker.rs
technical-indicator-calculator/src/cache/: completeness.rs  completeness_controller.rs  mod.rs  redis.rs
technical-indicator-calculator/src/database/: mod.rs  models.rs  postgres.rs  postgres_ext.rs  postgres_helpers.rs  schema.rs
technical-indicator-calculator/src/indicators/: calculator.rs  mod.rs  oscillators.rs  overlaps.rs  ta.rs  volatility.rs  volume.rs
technical-indicator-calculator/src/indicators/patterns/: double_candle.rs  mod.rs  recognizer.rs  single_candle.rs  triple_candle.rs  utils.rs
technical-indicator-calculator/src/processor/: job.rs  mod.rs  worker.rs
technical-indicator-calculator/src/strategy/: cli_handler.rs  evaluator.rs  import_export.rs  mod.rs  repository.rs  repository_helpers.rs  schema.rs  validator.rs
technical-indicator-calculator/src/talib_bindings/: common.rs  ffi.rs  mod.rs  oscillators.rs  overlaps.rs  patterns.rs  volatility.rs  volume.rs
technical-indicator-calculator/src/utils/: log_utils.rs  mod.rs  utils.rs
(+8 files in other folders)
