[package]
name = "technical-indicator-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance technical indicator calculator for cryptocurrency data"
build = "build.rs"  # Added build script for TA-Lib linking

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
postgres-types = { version = "0.2", features = ["derive"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Threading and concurrency
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
num_cpus = "1.16"

# Technical analysis is implemented locally instead of using the ta crate

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
